Bug 1999123 [Wayland] Don't consider popup explicitly moved if it's resized only r=emilio, a=dsmith DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D272220