widget/gtk/nsWindow.cpp
@@ -2328,7 +2328,9 @@ void nsWindow::NativeMoveResizeWaylandPopup(bool aMove, bool aResize) {
   }
 
   // It's safe to expect the popup position is handled onwards.
-  mWaylandApplyPopupPositionBeforeShow = false;
+  if (aMove) {
+    mWaylandApplyPopupPositionBeforeShow = false;
+  }
 
   // We expect all Wayland popus have zero margin. If not, just position
   // it as is and throw an error message.
